# clamav

./: CMakeLists.txt
clamconf/: CMakeLists.txt
clamd/: CMakeLists.txt  clamd.c  localserver.c  rlbox_clamd_callbacks.cpp  rlbox_clamd_callbacks.h  scanner.c  server-th.c  session.c  thrmgr.c
clamdscan/: proto.c
clamscan/: CMakeLists.txt  manager.c  manager.h  rlbox_clamscan_callbacks.cpp  rlbox_clamscan_callbacks.h
libclamav/: CMakeLists.txt  clamav.h  matcher.c  matcher.h  others.c  scanners.c
libclamav/c++/: ScannerStructsForRLBox.h  clamav_rlbox.h  clamav_rlbox_types.h  rlbox_scanner.cpp  rlbox_scanner.h
unit_tests/: CMakeLists.txt  check_clamav.c  check_clamd.c  testcase.py
